Video Section Corrected issues with video section Corrected sizes of images causing screen to jump

--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,7 @@ ul.navbar-nav a {
     background: #efefef;
     position: relative;
     text-align: center;
+    overflow: hidden;
 }
 
 #section7 h1 {
@@ -489,20 +490,39 @@ ul.navbar-nav a {
     font-family: 'Lato Bold', sans-serif;
 }
 
-.s7-video {
-    width: 600px;
-    border: none;
-    overflow: hidden;
-    height: auto;
-    display: inline-block;
-    margin: 10px;
+.s7-block {
+    width:100%;
+    margin: 0 10%;
+    clear: both;
 }
 
-.s7-cont {
-    padding: 10px 20px 10px 20px;
-    display: inline-block;
-    width: 50%;
-    box-sizing: border-box;
+.video-container {
+    width: 40%;
+    float: left;
+    margin: 20px 0 0 0;
+}
+
+.s7-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    background-color: #000;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.s7-video iframe{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.s7-cont{
+    float: left;
+    width: 40%;
+    margin: 0 20px;
 }
 
 .s7-cont p {
@@ -510,23 +530,9 @@ ul.navbar-nav a {
     font-size: 14px;
 }
 
-.s7-cont h2 {
+#section7 .s7-cont h2 {
     color: #ee534f;
     font-size: 22px;
-}
-
-.s7-cont a {
-    width: 100px;
-    text-align: center;
-    display: block;
-    margin-top: 20px;
-    text-decoration: none;
-    color: #000;
-    font-family: 'Roboto Slab Regular', sans-serif;
-}
-
-.s7-cont a:hover {
-    color: #ee534f;
 }
 
 /*==================== SECTION 8 ====================*/
